
27. Jan. 2002
- changed kcprintf() calls in panic() to vkcprintf for good CR/LF (MAD)
- drive and partition scanning finished (joy)
- initinfo shows the available gemdos logical drives (joy)

28. Jan. 2002
- 1-bit color depth on Falcon now in proper black-on-white colors (joy)
- machine_init() split to two phases - machine_detect() can be called very
  early() and new machine_init() creates cookies etc. (joy)
- screen.c now detects proper screen size from VIDEL registers - there's no
  more trash on the screen - the size is set to 640x480 (joy)
- lineainit.c sets the variables according to proper screen resolution (joy)
- fixed BDOS 16-bit FAT - integer computing was overflowing in fsdrive.c (joy)

30. Jan. 2002
- bdos/osmem.c variables init fixed. (joy)
- bios/blkdev.c - mediach returns "not changed" status for hard drives (joy)
- bios/machine.c - _FRB buffer for DMA operations to FastRAM added (joy)
- bios/floppy.c - floppy rwabs now use _FRB if destination is in FastRAM (joy)

03. Feb. 2002
- bios/screen.c - do not change VIDEL freq by Shifter init code (joy)
- bios/blkdev.c - buf must be incremented (thanks Laurent) (joy)
                - getbpb no more divide by zero error (thanks Laurent) (joy)
- bios/floppy.c - corrent blkdev[].unit init for floppy B: (thx Laurent) (joy)

06. Mar. 2002
- bios/machine.c - got rid of some compiler warnings

07. Mar. 2002
- Made the VDI compilable again... And it even seems already to work a little
  bit (Thomas)

08. Mar. 2002
- Cleaned up the AES sources, added prototypes and header files. The AES can
  now be linked with the rest of EmuTOS. (Thomas)

11. Mar. 2002
- vdi/lisastub.c cleaned up of warnings 
- vdi/gsxextrn.h added prototypes

12. Mar. 2002
- vdi/* made prototypes, no warnings anymore, indented whole vdi (MAD) 
- vdi/* jmptbl.c changed jumptables functions to void - arguments 
  are passed in arrays in VDI, not via stack.  (MAD)
- vdi/lisagem.S partitially implemented mouse driver
  
  