@@ -171,7 +171,7 @@ void startup(void)
     mfp_init();         /* init MFP, timers, USART */
     kbd_init();         /* init keyboard, disable mouse and joystick */
     midi_init();        /* init MIDI acia so that kbd acia irq works */
-    mouse_init();       /* init mouse driver */
+    //mouse_init();       /* init mouse driver */
     clock_init();       /* init clock */
     nls_init();         /* init native language support */
     nls_set_lang(get_lang_name());
